--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
+<body ng-app="shopTracker">
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -23,8 +23,8 @@
 
   <div ng-controller="ShopLog">
     <ul>
-      <li ng-repeat="member in members">
-      <span>{{member.name}}</span>
+      <li ng-repeat="x in members">
+      <span>{{x.name}}</span>
 
   </div>
 
