trying to fix api calls

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,8 @@
 <p>This is the partial for view 1.</p>
+<div>
+<ul class="members">
+<li ng-repeat="member in members">
+<p>{{member.name}}</p>
+</li>
+</ul>
+</div>
