multi-controller setup

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" > <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="shopTracker" > <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,20 +26,26 @@
   <script src="services.js"></script>
   
 </head>
-<body ng-app="shopTracker" ng-controller="MainControl">
+<body >
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
+  <div ng-controller="chDeviceControl">
+  <p>{{chdevice}}</p>
+  </div>
+  <div ng-controller="SubgroupControl">
+  <p>{{subgroups}}</p>
+  </div>
 
-
-  <div ng-repeat="x in members"> show the log here: 
+  <div ng-controller="MemberControl">
+  <div  ng-repeat="x in members"> show the log here: 
   <ul>
   <li> {{x.name}}
   <p> {{x.id}}
   </li>
   </ul>
-
+  </div>
   
   </div>
 
