--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
   <script src="components/version/interpolate-filter.js"></script>
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="app.js"></script>
-  <script src="controllers.js"></script>
-  <script src="services.js"></script>
+  <!--<script src="controllers.js"></script>
+  <script src="services.js"></script>-->
   
 </head>
 <body >
@@ -37,7 +37,7 @@
   <div ng-controller="SubgroupControl">
   <p>{{subgroups}}</p>
   </div>
-
+<!--
   <div ng-controller="MemberControl">
     <div  ng-repeat="x in members"> 
     <ul>
@@ -49,21 +49,16 @@
       </li>
     </ul>
      </div>
-  </div> 
-  
-  <div ng-controller="MemberPostControl">
-    <p>Name: <input type="text" name="name" ng-model="name" required /></p>
-    <p>Has Keys: <input type="text" name="keys" ng-model="keys" required /></p>
-    <p>Is Active: <input type="text" name="active" ng-model="active" required /></p>
-
-    <button ng-click="SendData()">Submit</button>
-    <hr />
-    {{postResponse}}
-    
+  </div> -->
+  <div ng-controller="MemberPostControl" >
+    <p>Name: <input type="text" id="name" name="name" ng-model="user.name" required /></p>
+    <p>Has Keys: <input type="text" id="keys" name="keys" ng-model="user.keys" required /></p>
+    <p>Is Active: <input type="text" id="active" name="active" ng-model="user.active" required /></p>
+    <button ng-click="SendPost()">Submit</button>
 </div>
 <div ng-controller="MemberDeleteControl">
 <p>Delete Member: <input type="number" name="id" ng-model="id" required/></p>
-<button ng-click="SendData()">Submit</button>
+<button ng-click="SendDel()">Submit</button>
 </div>
 
   <!-- In production use:
