--- a/app/index.html
+++ b/app/index.html
@@ -136,11 +136,12 @@
      </div>
   </div> -->
   <div ng-controller="MemberPostControl" >
+  <form name="AddMemberForm" ng-submit="SendPost()">
     <p>Name: <input type="text" id="name" name="name" ng-model="user.name" required /></p>
-    <p>Has Keys: <input type="text" id="keys" name="keys" ng-model="user.keys" required /></p>
+    <p>Has Keys: <input type="text" id="keys" name="keys" ng-model="user.hasKeys" required /></p>
     <p>Is Active: <input type="text" id="active" name="active" ng-model="user.active" required /></p>
-    <button ng-click="SendPost()">Submit</button>
-</div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
 <div ng-controller="MemberDeleteControl">
 <p>Delete Member: <input type="number" name="id" ng-model="id" required/></p>
 <button ng-click="SendDel()">Submit</button>
