--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  
+
 </head>
 <body >
 
@@ -91,6 +91,7 @@
 <div class="container">
   <h2>Image</h2>
   <img class="img-responsive" src="Images/GrassCar.jpg" alt="Car in the Grass" width="500" height="344"> 
+
 </div>
 
 <div class="container" ng-controller="MemberControl">
@@ -115,7 +116,7 @@
 
 <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+  <![endif]>
   <div ng-controller="chDeviceControl">
   <p>{{chdevice}}</p>
   </div>
@@ -135,22 +136,29 @@
     </ul>
      </div>
   </div> -->
-  <div ng-controller="MemberPostControl" >
-    <p>Name: <input type="text" id="name" name="name" ng-model="user.name" required /></p>
-    <p>Has Keys: <input type="text" id="keys" name="keys" ng-model="user.keys" required /></p>
-    <p>Is Active: <input type="text" id="active" name="active" ng-model="user.active" required /></p>
-    <button ng-click="SendPost()">Submit</button>
+  <div class="container">
+    <div ng-controller="MemberPostControl" >
+      <p>Name: <input type="text" id="name" name="name" ng-model="user.name" required /></p>
+      <p>Has Keys: <input type="text" id="keys" name="keys" ng-model="user.keys" required /></p>
+      <p>Is Active: <input type="text" id="active" name="active" ng-model="user.active" required /></p>
+      <button ng-click="SendPost()">Submit</button>
+    </div>
 </div>
-<div ng-controller="MemberDeleteControl">
-<p>Delete Member: <input type="number" name="id" ng-model="id" required/></p>
-<button ng-click="SendDel()">Submit</button>
+
+<div class="container">
+  <div ng-controller="MemberDeleteControl">
+  <p>Delete Member: <input type="number" name="id" ng-model="id" required/></p>
+  <button ng-click="SendDel()">Submit</button>
+  </div>
 </div>
 
         <footer class="footer">
           <div class="footer-inner">
             <div class="container">
               <div class="row">
-                <div class="span2"><img class="logo" src="Images/ActionCar.jpg"></div>
+                <div class="span2">
+				  <img class="logo" src="Images/ActionCar.jpg">
+				</div>
               </div>
             </div>
           </div>
