--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,11 @@
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="shopTracker" > <!--<![endif]-->
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Shop Tracking</title>
   <meta name="description" content="">
@@ -28,7 +33,6 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   
-  
 	<title ng-bind="pageTitle" class="ng-binding">Home | Formula Electric</title>
 
     <!-- set up the mobile viewport -->
@@ -47,51 +51,55 @@
 </head>
 <body >
 
-    <div class="container">
-      <h1>Design. Build. Race. Repeat.</h1>
-      <p>The Formula Electric design team at Missouri S&amp;T is a group of engineering students that build a scale, formula-style, all-electric racecar every year.</p>
-    </div>
-  </section>
-
-  <section class="subheading">
-    <div class="list">
-      <div class="container">
-        <div class="row">
-          <a href="http://www.facebook.com/FormulaSAEElectric" target="_blank"><div class="action span4"><i class="fa fa-2x fa-facebook-square"></i>Follow Us</div></a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="news">
-    <div class="header">
-      <div class="container">
-        <h2>Who We Are</h2>
-      </div>
-    </div>
-
-    <div class="body">
-      <div class="container">
-        <div class="posts">
-          <div class="content">
-            <h3>A New Team For A New Series</h3>
+	<div class="container">
+	  <h2>Miner Racing</h2>
+	  <ul class="nav nav-pills">
+		<li class="active"><a data-toggle="pill" href="#home">Home</a></li>
+		<li><a data-toggle="pill" href="#menu1">Members</a></li>
+		<li><a data-toggle="pill" href="#menu2">Devices</a></li>
+		<li><a data-toggle="pill" href="#menu3">Time Card</a></li>
+		<li><a data-toggle="pill" href="#menu4">Sub Groups</a></li>
+		<li><a data-toggle="pill" href="#menu5">Check In</a></li>
+	  </ul>
+	  
+	  <div class="tab-content">
+		<div id="home" class="tab-pane fade in active">
+		  <h1>Design. Build. Race. Repeat.</h1>
+		  <p>The Formula Electric design team at Missouri S&amp;T is a group of engineering students that build a scale, formula-style, all-electric racecar every year.</p>
+          
+		  
+		  <h3>A New Team For A New Series</h3>
             <p>
               We are the Formula Electric design team at <a href="http://mst.edu">Missouri University of Science and Technology</a> in Rolla, Missouri. Participating in the Formula SAE Electric series of racing, we design, build, and race a scale formula-style car each year. While Formula SAE has been around for a long time, the electric series has only recently come to the U.S. In 2012 a group of students got together to form an entirely new team to race in the new series, and Formula Electric was born.
             </p>
-          </div>
-          </div>
-        </div>
-      </div>
-    </section></div>
+		</div>
+		<div id="menu1" class="tab-pane fade">
+		  <h3>Members</h3>
+		  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		</div>
+		<div id="menu2" class="tab-pane fade">
+		  <h3>Devices</h3>
+		  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+		</div>
+		<div id="menu3" class="tab-pane fade">
+		  <h3>Time Card</h3>
+		  <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+		</div>
+		<div id="menu4" class="tab-pane fade">
+		  <h3>Sub Groups</h3>
+		</div>
+		<div id="menu5" class="tab-pane fade">
+		  <h3>Check in</h3>
+		</div>
+	  </div>
+	</div>
   
 </div>
 
         </div>
   
 <div class="container">
-  <h2>Image</h2>
-  <img class="img-responsive" src="Images/GrassCar.jpg" alt="Car in the Grass" width="500" height="344"> 
-
+	<img class="logo" src="Images/GrassCar.jpg" width="350" height="300">
 </div>
 
 <div class="container" ng-controller="MemberControl">
@@ -151,19 +159,26 @@
   </div>
 </div>
 
+	<div class="container">
+      <p><p>
+    </div>
+
         <footer class="footer">
           <div class="footer-inner">
-            <div class="container">
               <div class="row">
                 <div class="span2">
-				  <img class="logo" src="Images/ActionCar.jpg">
+				  <img class="logo" src="Images/Logo_White.png" width="150" height="100">
+				  <style>
+					footer{
+					background-color: green;
+					}
+				  </style>
 				</div>
-              </div>
             </div>
           </div>
         </footer>
       </div>
     </div>
-
+	
 </body>
 </html>
